--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,101 @@
-/*# sourceMappingURL=style.css.map */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+blockquote, q {
+  quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: "";
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+button {
+  cursor: pointer;
+}
+
+button, input {
+  font: inherit;
+}
+
+body, html {
+  width: 100%;
+  height: 100%;
+  font: 400 40px "Inter", sans-serif;
+  color: #000;
+  text-align: center;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
+}
+
+.bored-app {
+  padding-top: 115px;
+  height: 100%;
+}
+
+.title {
+  font-weight: 700;
+}
+
+.subtitle {
+  margin-top: 66px;
+}
+
+.get-idea-btn {
+  margin-top: 94px;
+  width: 500px;
+  height: 60px;
+  color: #fff;
+  font-size: 32px;
+  background-color: #0094FF;
+  border: none;
+}
+.get-idea-btn:hover {
+  opacity: 0.7;
+}
+
+.green-gradient-back {
+  background: linear-gradient(180deg, rgba(0, 176, 28, 0.2), rgba(255, 255, 255, 0));
+}/*# sourceMappingURL=style.css.map */
